[package]
name = "devy"
version = "0.1.0"
edition = "2021"
authors = ["dvnc0"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = "4.2.1"
rand = "0.8.5"
colorful = "0.2.2"
serde = {version = "1.0.160", features = ["derive"]}
serde_yaml = "0.9.21"
curl = {version = "0.4.44", features = ["http2"]}
